# hekshermgmt

./: .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: pull-requests.yml  release-final.yml
back/: pyproject.toml  setup.cfg
back/hekshermgmt/: app.py  main.py  util.py
back/hekshermgmt/api/: v1.py
back/hekshermgmt/backend/: backend_v1.py
back/scripts/: lint.sh  test.sh
backend/: pyproject.toml
backend/hekshermgmt/: _version.py  app.py  context_vars.py  heksher_client.py  main.py
backend/hekshermgmt/api/v1/: __init__.py  rules.py  settings.py  utils.py
backend/scripts/: blackbox_test.sh  lint.sh  test.sh  unittest.sh
backend/tests/blackbox/: conftest.py  test_health_api.py  test_rules_api.py  test_settings_api.py  utils.py
backend/tests/unittests/: conftest.py  test_rules.py  test_settings.py
front/: .eslintrc.json  .prettierrc.js  package-lock.json  package.json  tsconfig.json
front/public/: index.html
front/scripts/: lint.sh  test.sh
front/src/: about.tsx  app.tsx  autocompleteWithDefault.tsx  autocomplete_with_default.tsx  confirm_dialog.tsx  contextSelect.tsx  context_select.tsx  controlledInput.tsx  controlled_input.tsx  expand_chip.tsx  hiddenString.tsx  hidden_string.tsx  index.tsx  models.ts  potentialRules.spec.ts  potentialRules.ts  potential_rules.test.ts  potential_rules.ts  resizableDrawer.tsx  resizable_drawer.tsx  ruleOptionsView.tsx  rule_options_view.tsx  rulesView.tsx  rules_view.tsx  setting.ts  settingType.tsx  setting_type.ts  setting_type.tsx  setting_view.tsx  settingsView.tsx  settings_view.tsx  short_string.tsx  truncString.tsx  trunc_string.tsx  valueDialog.tsx  value_dialog.tsx  value_view.tsx
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: About.vue  EditRuleDialog.vue  NewRuleDialog.vue  RuleValue.vue  SettingRules.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/views/: ConfigurationsTable.vue  Export.vue
image/: README.md  gunicorn_conf.py  nginx.conf  supervisord.ini
scripts/: lint.sh  test.sh
