[tool.poetry]
name = "hekshermgmt"
version = "0.2.2"
description = "Heksher Management Tool (backend)"
authors = ["Dev Team <server@biocatch.com>"]

[tool.poetry.dependencies]
python = "~3.8"

# api & networking
fastapi = "^0.67.0"
uvicorn = {version="^0.15.0", extras=["standard"]}

# serialization
# until https://github.com/ijl/orjson/pull/176 is merged
orjson-pydantic = "^3.6.4"
envolved = "^0.5.0"
httpx = "^0.21.3"
sentry-sdk = "^1.5.1"
aiologstash2 = "^2.0.1"
contextfilter = "^0.3.0"
requests = "^2.27.1"
yellowbox = "^0.7.1"
yellowbox-heksher = "^0.1.0"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.931"

[[tool.poetry.source]]
name = "pypi-public"
url = "https://pypi.org/simple/"
default = true

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
