[tool.poetry]
name = "hekshermgmt"
version = "0.1.0"
description = ""
authors = ["Aviram Hassan <aviram.hassan@biocatch.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
yellowbox = {extras = ["postgresql"], version = "^0.5.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
