[tool.poetry]
name = "hekshermgmt"
version = "0.1.0"
description = ""
authors = ["Aviram Hassan <aviram.hassan@biocatch.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
fastapi = "^0.63.0"
aiologstash = "^2.0.0"
envolved = "0.3.0"
sentry-sdk = "^0.19.5"
httpx = "^0.16.1"
contextfilter = "^0.3.0"
uvicorn = {version = "^0.13.3", extras = ["standard"]}
orjson = "^3.4.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
yellowbox = {extras = ["postgresql"], version = "^0.5.0"}
flake8 = "^3.8.4"
pytype = "^2021.1.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
